# esp-idf-inkplate

./: LICENSE  README.md
components/inkplate/: CMakeLists.txt  Kconfig
components/inkplate/drivers/: PCF85063A.cpp  backlight.cpp  eink_10.cpp  eink_6.cpp  inkplate_platform.cpp  touch_screen.cpp
components/inkplate/graphical/: graphics.cpp  image.cpp  image_bmp.cpp  image_jpeg.cpp  image_png.cpp  pngle.cpp
components/inkplate/include/drivers/: PCF85063A.hpp  backlight.hpp  eink.hpp  eink_10.hpp  eink_6.hpp  inkplate_platform.hpp  press_keys.hpp  touch_screen.hpp
components/inkplate/include/graphical/: adafruit_gfx.hpp  defines.hpp  image.hpp  inkplate.hpp  print.hpp
components/inkplate/include/services/: esp.hpp  sd_card.hpp  wire.hpp
components/inkplate/services/: sd_card.cpp  wire.cpp
examples/basic_bw/: CMakeLists.txt  partitions.csv  sdkconfig
examples/basic_bw/main/: CMakeLists.txt  main.cpp
examples/basic_grey/: CMakeLists.txt
examples/basic_grey/main/: main.cpp
examples/basic_partial/: CMakeLists.txt
examples/basic_partial/main/: main.cpp
examples/basic_rtc/: sdkconfig
examples/basic_rtc/main/: main.cpp
